# face-alignment

./: CMakeLists.txt  README.md
demos/features/: CMakeLists.txt
demos/features/source/: features.cpp
demos/gui/: CMakeLists.txt
demos/gui/source/: main.cpp
modules/face-detector/: CMakeLists.txt
modules/face-detector/include/face-detector/: FaceDetector.hpp  ViolaJones.hpp  detector.hpp
modules/face-detector/source/: FaceDetector.cpp  ViolaJones.cpp
modules/face-landmark/: CMakeLists.txt
modules/face-landmark/include/ert/: ObjectDetection.hh  RegressionTree.hh  SampleList.hh  Serializable.hh  ShapePredictor.hh  ShapePredictorTrainer.hh  ert  opencv.hh
modules/face-landmark/include/face-landmark/: FLandmark.hpp  FaceLandmark.hpp  landmark.hpp
modules/face-landmark/source/: FLandmark.cpp  FaceLandmark.cpp  ObjectDetection.cpp  PointAffineTransform.cpp  PointAffineTransform.hh  ProgressIndicator.cpp  ProgressIndicator.hh  RegressionTree.cpp  SampleList.cpp  Serializable.cpp  ShapePredictor.cpp  ShapePredictorTrainer.cpp  marsene_twister.h  opencv.cpp
modules/face-landmark/source/ert/: ObjectDetection.cpp  ObjectDetection.hh  PointAffineTransform.cpp  PointAffineTransform.hh  ProgressIndicator.cpp  ProgressIndicator.hh  RegressionTree.cpp  RegressionTree.hh  SampleList.cpp  SampleList.hh  Serializable.cpp  Serializable.hh  ShapePredictor.cpp  ShapePredictor.hh  ShapePredictorTrainer.cpp  ShapePredictorTrainer.hh  console_progress_indicator.h  full_object_detection.h  opencv.cpp  point_transforms.h  shape_predictor.h
modules/face-landmark/source/ert/rand/: mersenne_twister.h  rand_kernel_1.h
modules/face-landmark/source/rand/: rand_kernel_1.h
scripts/: generate-scp.sh
tools/simulate/: CMakeLists.txt
tools/simulate/source/: main.cpp
tools/test/: CMakeLists.txt  CMakeLists.txt~
tools/test/source/: main.cpp
tools/train/: CMakeLists.txt
tools/train/source/: main.cpp
tools/video/: CMakeLists.txt
tools/video/source/: main.cpp
tools/viewer/: CMakeLists.txt
tools/viewer/source/: main.cpp
